<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNoteActivity">
    <TextView
        android:id="@+id/tvragister"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" />
    <RelativeLayout
        android:id="@+id/rlmsin"
        android:layout_above="@+id/btnsave"
        android:layout_below="@+id/tvragister"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView

                   android:id="@+id/txtname"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtname"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtFirstname"
                   android:inputType="text"
                   android:layout_marginHorizontal="8dp"
                   android:layout_below="@+id/txtname"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"/>
               <TextView
                   android:layout_below="@+id/edtFirstname"
                   android:id="@+id/txtlast"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtlastname"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtLastname"
                   android:inputType="text"
                   android:layout_marginHorizontal="8dp"
                   android:layout_below="@+id/txtlast"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:layout_below="@+id/edtLastname"
                   android:id="@+id/txtAge"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtage"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtAge"
                   android:inputType="number"
                   android:layout_marginHorizontal="8dp"
                   android:layout_below="@+id/txtAge"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:id="@+id/txtgender"
                   android:layout_below="@+id/edtAge"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtgender"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <RadioGroup
                   android:id="@+id/gender"
                   android:layout_below="@+id/txtgender"
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/rbmale"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:buttonTint="@color/colorPrimary"
                       android:checked="true"

                       android:text="Male"/>
                   <RadioButton
                       android:id="@+id/rbfemale"
                       android:layout_marginStart="10dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:buttonTint="@color/colorPrimary"
                       android:text="Female"
                       android:layout_marginLeft="10dp" />
               </RadioGroup>
               <TextView
                   android:layout_below="@+id/gender"
                   android:id="@+id/txtCity"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtCity"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtCity"
                   android:inputType="text"
                   android:layout_marginHorizontal="8dp"
                   android:layout_below="@+id/txtCity"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:layout_below="@+id/edtCity"
                   android:id="@+id/txtState"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtmobile"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtmobile"
                   android:inputType="number"
                   android:layout_marginHorizontal="8dp"
                   android:layout_below="@+id/txtState"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <TextView
                   android:layout_below="@+id/edtmobile"
                   android:id="@+id/txtIdentity"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtidentity"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <Spinner
                   android:id="@+id/spinnercategory"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginTop="10dp"
                   android:layout_below="@+id/txtIdentity"
                   android:spinnerMode="dropdown"
                   android:padding="10dp"
                   android:background="@drawable/spinnertheme"
                   android:layout_marginHorizontal="10dp"
                   android:textColor="@android:color/black"
                   android:textColorHint="@android:color/black"
                   android:textSize="15dp" />

               <TextView
                   android:layout_below="@+id/spinnercategory"
                   android:id="@+id/txtmarridstatus"
                   android:layout_marginStart="8dp"
                   android:text="@string/txtmarid"
                   android:layout_marginTop="10dp"
                   android:textSize="20sp"
                   android:textColor="@android:color/black"
                   android:textStyle="bold|italic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp" />
               <androidx.appcompat.widget.AppCompatCheckBox
                   android:id="@+id/cbmarried"
                   android:checked="true"
                   android:layout_margin="8dp"
                   android:text="@string/married"
                   android:layout_below="@+id/txtmarridstatus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
               <androidx.appcompat.widget.AppCompatCheckBox
                   android:id="@+id/cbunmarried"
                   android:layout_margin="8dp"
                   android:layout_toEndOf="@+id/cbmarried"
                   android:text="@string/unmarried"
                   android:layout_below="@+id/txtmarridstatus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/cbmarried" />
           </RelativeLayout>
       </ScrollView>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsave"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_bright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>